# CPI-anchor

./: .gitignore  Anchor.toml
programs/cross1/: Cargo.toml
programs/cross2/: Cargo.toml
programs/cross2/src/: lib.rs
tests/: cpi1.js
